--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -24,8 +24,8 @@
     </section>
     <section class="Copyrigth">
         <form action="" method="post">
-            <label for="email">¿Queres recibir nuestras mejores ofertas?</label>
-            <input type="email" name="email" id="email">
+            <label for="subscripcion">¿Queres recibir nuestras mejores ofertas?</label>
+            <input type="subscripcion" name="subscripcion" id="subscripcion">
             <button type="submit">Suscribite</button>
         </form>
         <p>Copyrigth todos los derechos son reservados</p>
@@ -34,3 +34,5 @@
 
 <script src="/javascripts/glider.js"></script>
 <script src="/javascripts/productos.js"></script>
+<script src="/javascripts/buscador.js"></script>
+<script src="/javascripts/register.js"></script>
