subimos validaciones de productos

--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -107,6 +107,7 @@
             <button type="reset">Cancelar</button>
         </form>
     </main>
-    <%- include('../partials/footer') %> 
+    <%- include('../partials/footer') %> }
+    <script src="/javascripts/register.js"></script>
 </body>
 </html>
