--- a/src/views/admin/crearProducto.ejs
+++ b/src/views/admin/crearProducto.ejs
@@ -20,7 +20,7 @@
                         <div class="form-floating mb-3"> 
                             <input type="text" class="form-control" name="titulo" placeholder="Nombre del producto" id="titulo" value="<%= locals.old && old.titulo ? old.titulo : null%>" placeholder="name@example.com">
                             <label for="titulo">Nombre del producto</label>
-                            <p class="span text-danger">
+                            <p class="span text-danger" id="tituloError">
                                 <%= locals.errors && errors.titulo ? errors.titulo.msg : null %>
                             </p>
                         </div>
@@ -28,21 +28,21 @@
                         <div class="form-floating mb-3">
                             <input class="form-control" type="number" name="precio" placeholder="Precio del producto" id="price" value="<%= locals.old && old.precio ? old.precio : null%>">
                             <label class="form-label" for="price">Precio del producto</label>
-                            <p class="span text-danger">
+                            <p class="span text-danger" id="priceError">
                                 <%= locals.errors && errors.precio ? errors.precio.msg : null %>
                             </p>
                         </div>
                         <div class="form-floating mb-3">
                             <input class="form-control" type="number" name="descuento" placeholder="Descuento del producto" id="discount" value="<%= locals.old && old.descuento ? old.descuento : 0%>">
                             <label class="form-label" for="discount">Descuento del producto</label>
-                            <p class="span text-danger">
+                            <p class="span text-danger" id="discountError">
                                 <%= locals.errors && errors.descuento ? errors.descuento.msg : null %>
                             </p>
                         </div>
                         <div class="form-floating mb-3">
                             <input class="form-control" type="text" name="stock" placeholder="Stock con el que cuenta el producto" id="stock" value="<%= locals.old && old.stock ? old.stock : null%>">
                             <label class="form-label" for="stock">Stock con el que cuenta el producto</label>
-                            <p class="span text-danger">
+                            <p class="span text-danger" id="stockError">
                                 <%= locals.errors && errors.stock ? errors.stock.msg : null %>
                             </p>
                         </div>
@@ -116,7 +116,7 @@
                                     <!-- Columnas -->
 
                                 </div>
-                                <p class="span text-danger">
+                                <p class="span text-danger" id="imgError">
                                     <%= locals.errors && errors.imagen ? errors.imagen.msg : null %>
                                 </p>
                             </div>
@@ -139,7 +139,7 @@
                             
                             <div class="col col-4">
                                 <h3 class="text-center">Categorias</h3>
-                                <select class="form-select" name="categoria" id="floatingSelect" aria-label="Floating label select example">
+                                <select class="form-select" name="categoria" id="categorias" aria-label="Floating label select example">
                                     <% if (locals.errors && old.categoria) { %>
                                         <option hidden value="">Selecciona una opcion</option>
                                         <option <%= old.categoria == "1" ? "selected" : null %>  value="Smartphones">Smartphones</option>
@@ -154,13 +154,12 @@
                                         <% }) %>
                                     <% } %> 
                                   </select>
-                                <% if (locals.errors && errors.categoria) { %>
-                                    <p class="span text-danger"><%=  errors.categoria.msg %></p>
-                                <% } %>
+                                <p class="span text-danger" id="categoriaError"><%= (locals.errors && errors.categoria) ?  errors.categoria.msg : null %></p>
+                                
                             </div>
                             <div class="col col-4">
                                 <h3 class="text-center">Marcas</h3>
-                                <select class="form-select" name="marca" id="floatingSelect" aria-label="Floating label select example">
+                                <select class="form-select" name="marca" id="marcas" aria-label="Floating label select example">
                                     <% if (locals.errors && old.marca) { %>
                                         <option hidden value="">Selecciona una opcion</option>
                                         <% marcas.forEach(marca => { %>
@@ -178,9 +177,7 @@
                                         <% }) %>
                                     <% } %> 
                                 </select>
-                                <% if (locals.errors && errors.marca) { %>
-                                    <p class="span text-danger"><%= errors.marca.msg %></p>
-                                <% } %>
+                                <p class="span text-danger" id="marcaError"><%= (locals.errors && errors.marca) ? errors.marca.msg : null%></p>
                             </div>
                         </div>
                     </div>
@@ -193,7 +190,7 @@
                                     <textarea name="descripcion" id="description" cols="300" rows="300" class="form-control" placeholder="Leave a comment here" style="resize: none;"><%= locals.old && old.descripcion ? old.descripcion : null%></textarea>
                                     <label for="description">Descripcion del producto</label>
                                 </div>
-                                <p class="span text-danger">
+                                <p class="span text-danger" id="descriptionError">
                                     <%= locals.errors && errors.descripcion ? errors.descripcion.msg : null %>
                                 </p>
                             </div>
@@ -207,10 +204,11 @@
             <!-- Button -->
 
             <div class="create-button text-center mt-5 pb-5">
-                <button class="btn btn-primary" type="submit">Crear producto</button>
+                <button class="btn btn-primary" id="btn-submit" type="submit">Crear producto</button>
             </div>
         </form>
     </main>
     <script src="/javascripts/imagenes.js"></script>
+    <script src="/javascripts/validacionProductos.js"></script>
 </body>
 </html>
