--- a/src/views/admin/listaProductos.ejs
+++ b/src/views/admin/listaProductos.ejs
@@ -49,11 +49,11 @@
                               <% } %>
                                 <% if (redirection !== "list") { %>
                                   <form action="/admin/destroy/<%= producto.id%>?_method=DELETE" method="post">
-                                    <button type="submit" class="btn btn-danger"><i class="fas fa-trash"></i></button>
+                                    <button type="submit" id="eliminar-producto" class="btn btn-danger"><i class="fas fa-trash"></i></button>
                                   </form>
                                 <% }else{ %>
                                   <form action="/admin/crash/<%= producto.id%>?_method=DELETE" method="post">
-                                    <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                                    <button type="submit" id="eliminar-producto" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                                   </form>
                                 <% } %>
                             </div>
@@ -65,7 +65,8 @@
           </table>
         </div>
     </main>
-
+    <script src="/javascripts/sweetAlert.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
