carrito funcional(1er parte - API - listar - agregar)

--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -108,6 +108,6 @@
         </form>
     </main>
     <%- include('../partials/footer') %> }
-    <script src="/javascripts/register.js"></script>
+   <!-- <script src="/javascripts/register.js"></script>-->
 </body>
 </html>
