--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -1,15 +1,84 @@
 /* Articulo */
+
+.cart main {
+    width: 90%;
+    margin: 0 auto;
+}
+.cart main h1 {
+    font-weight: 700;
+    margin: 20px 0;
+}
 .cart section article{
     background-color: var(--Marta);
-    margin: 0 auto;
-    width: 90%;
-    border: 1px solid var(--Alfonzo);
-    border-radius: 10px;
+    width: 100%;
+    border-bottom: 1px solid var(--Alfonzo);
+    border-top: 1px solid var(--Alfonzo);
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
     position: relative;
+    padding: 5px 0 10px 0;
     margin-bottom: 20px
 }
+.cart section article .imagenes{
+    width: 25%;
+} 
+.cart section article .imagenes img{
+    width: 100%;
+    object-fit: cover;
+}
+.cart section article .detail {
+    width: 73%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.cart section article .detail h4 {
+    width: 100%;
+    font-size: 16px;
+    margin: 10px 0 5px 0;
+}
+.cart section article .añadir-elementos {
+    display: flex;
+    width: 50%;
+    align-items: center;
+}
+.cart section article .añadir-elementos .restar,
+.cart section article .añadir-elementos .agregar {
+    background-color: var(--Alfonzo);
+    font-size: 700;
+    color: white;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    border: 1px solid white;
+    cursor: pointer;
+}
+.cart section article .añadir-elementos span {
+    margin: 0 10px;
+}
+.cart section article .precio-descuento {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.cart section article .precio-descuento p {
+    font-size: 14px;
+    margin-bottom: 2px;
+}
+.cart section article .precio-descuento .precio-secundario {
+    position: relative;
+    text-decoration: line-through;
+    color: gray;
+}
+.cart section article .precio-descuento .precio-secundario span {
+    position: absolute;
+    font-size: 10px;
+    color: green;
+    font-weight: 700;
+}
+/*
 .cart section article h3{
     width: 100%;
     text-align: center;
@@ -24,10 +93,11 @@
 }
 .cart section article .detail{
     width: 66%;
+    display: flex;
     text-align: center;
 }
 .cart section article .precio-descuento{
-    display: flex;
+    /*display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -66,27 +136,83 @@
     height: 30px;
     margin: 0 10px;
     border-radius: 5px;
-}
-.cart section article button{
-    width: 40px;
-    height: 40px;
+}*/
+.cart section article button.eliminar-item{
     position: absolute;
-    right: -15px;
-    top: -15px;
-    padding: 5px;
-    background-color: var(--Ruben);
-    color: white;
+    right: 10px;
+    top: 5px;
+    cursor: pointer;
+    color: black;
+    background: none;
     border: none;
-    border-radius: 5px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    border-bottom: solid 1px transparent;
 }
+.cart section article button.eliminar-item:hover {
+    border-bottom: solid 1px black;
+}
+
 .cart .Numeros{
-    width: 90%;
-    margin: 0 auto;
+    width: 100%;
     background-color: var(--Alfonzo);
     color: white;
     padding: 20px;
 }
+.cart .Numeros div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.cart .Numeros div.subtotal {
+    color: rgb(106, 106, 106);
+    font-weight: 700;
+    font-size: 14px;
+}
+.cart .Numeros div.subtotal h3 {
+    font-size: 14px;
+    font-weight: 700;
+    margin: 0;
+}
+.cart .Numeros div.total {
+    font-size: 18px;
+    font-weight: 700;
+}
+.cart .Numeros div.total h3 {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0;
+}
+.cart .Numeros .botones {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.cart .Numeros .botones button,
+.cart .Numeros .botones a {
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    padding: 15px 0;
+    cursor: pointer;
+   /* box-shadow: -10px 10px 20px -10px rgb(0, 0, 0, .5);*/
+    margin: 10px 0;
+}
+.cart .Numeros .botones button {
+    background-color: var(--Ruben);
+    color: white;
+    border: none
+}
+.cart .Numeros .botones a {
+    background-color: white;
+    border: solid 1px  var(--Ruben);
+    color: var(--Ruben)
+}
+/*
 .cart .Numeros h3{
     margin-top: 20px;
     text-transform: uppercase;
@@ -180,15 +306,27 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-}
+}*/
 /* Tablet */
-@media (min-width:426px){
-    .cart section article .detail{
+@media (min-width: 500px){
+    /*.cart section article .detail{
         width: 66%;
         text-align: center;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+    }*/
+    .cart section article .imagenes{
+        width: 20%;
+    } 
+    .cart section article .detail h4 {
+        width: 33%;
+    }
+    .cart section article .detail .añadir-elementos {
+        width: 33%;
+    }
+    .cart section article .detail .precio-descuento {
+        width: 33%;
     }
     .cart section form{
         max-height: 650px;
@@ -208,7 +346,6 @@
     }
     .cart main section{
         width: 58%;
-        padding-top: 20px;
     }
     .cart main section.Numeros{
         width: 40%;
@@ -216,6 +353,9 @@
     }
 }
 @media (min-width:800px){
+    .cart section article .imagenes{
+        width: 18%;
+    } 
     .cart main section.Numeros{
         max-height: 600px;
     }
