--- a/src/views/cart.ejs
+++ b/src/views/cart.ejs
@@ -9,67 +9,11 @@
 
     <main>
         <h1>Carrito de compras</h1>
-        <section>
-            <article>
-                <h3>Moto g100</h3>
-                <div class="imagenes">
-                    <img src="/images/productos/Moto-G100-pdp-kv-render-Iridescent-Sky-66hsdxr3k.png" alt="">
-                </div>
-                <div class="detail">
-                    <div class="precio-descuento">
-                        <p class="precio-secundario">$190000</p>
-                        <span>50%</span>
-                    </div>
-                    <p class="precio-principal">$95000</p>
-                    <div class="añadir-elementos">
-                        <div class="restar">-</div>
-                        <input type="number" value="1">
-                        <div class="agregar">+</div>
-                    </div>
-                </div>
-                <button><i class="fas fa-times"></i></button>
-            </article>
-            <article>
-                <h3>Moto g100</h3>
-                <div class="imagenes">
-                    <img src="/images/productos/Moto-G100-pdp-kv-render-Iridescent-Sky-66hsdxr3k.png" alt="">
-                </div>
-                <div class="detail">
-                    <div class="precio-descuento">
-                        <p class="precio-secundario">$190000</p>
-                        <span>50%</span>
-                    </div>
-                    <p class="precio-principal">$95000</p>
-                    <div class="añadir-elementos">
-                        <div class="restar">-</div>
-                        <input type="number" value="1">
-                        <div class="agregar">+</div>
-                    </div>
-                </div>
-                <button><i class="fas fa-times"></i></button>
-            </article>
-            <article>
-                <h3>Moto g100</h3>
-                <div class="imagenes">
-                    <img src="/images/productos/Moto-G100-pdp-kv-render-Iridescent-Sky-66hsdxr3k.png" alt="">
-                </div>
-                <div class="detail">
-                    <div class="precio-descuento">
-                        <p class="precio-secundario">$190000</p>
-                        <span>50%</span>
-                    </div>
-                    <p class="precio-principal">$95000</p>
-                    <div class="añadir-elementos">
-                        <div class="restar">-</div>
-                        <input type="number" value="1">
-                        <div class="agregar">+</div>
-                    </div>
-                </div>
-                <button><i class="fas fa-times"></i></button>
-            </article>
+        <section id="carrito">
+            
         </section>
         <section class="Numeros">
-            <form action="" method="post">
+           <!-- <form action="" method="post">
                 <h3>Subtotal</h3>
                 <div class="valor-productos">
                     <p>$190000</p>
@@ -105,8 +49,29 @@
                 <div class="botones">
                     <button type="submit">Comprar Productos</button>
                 </div>
+            </form>-->
+            <form action="" method="post">
+                <div class="subtotal">
+                    <h3>Subtotal</h3>
+                    <span>$ 570000</span>
+                </div>
+
+                <div class="total">
+                    <h3>Total</h3>
+                    <span>$ 570000</span>
+                </div>
+                
+                <div class="ofertas">
+                    <input type="checkbox" name="ofertas" id="ofertas">
+                    <label for="ofertas">Desea recibir nuestras proximas ofertas?</label>
+                </div>
+                <div class="botones">
+                    <button type="submit">Finalizar Compra</button>
+                    <a href="">Continuar comprando</a>
+                </div>
             </form>
         </section>
     </main>
+    <script src="/javascripts/carrito.js"></script>
 </body>
 </html>
