--- a/src/views/cart.ejs
+++ b/src/views/cart.ejs
@@ -7,12 +7,12 @@
 
     <%- include('./partials/header') %> 
 
-    <main>
+    <main >
         <h1>Carrito de compras</h1>
         <section id="carrito">
             
         </section>
-        <section class="Numeros">
+        <section class="Numeros" id="Numeros">
            <!-- <form action="" method="post">
                 <h3>Subtotal</h3>
                 <div class="valor-productos">
@@ -53,12 +53,12 @@
             <form action="" method="post">
                 <div class="subtotal">
                     <h3>Subtotal</h3>
-                    <span>$ 570000</span>
+                    <span id="subtotal"></span>
                 </div>
 
                 <div class="total">
                     <h3>Total</h3>
-                    <span>$ 570000</span>
+                    <span id="total"></span>
                 </div>
                 
                 <div class="ofertas">
