--- a/src/views/partials/card.ejs
+++ b/src/views/partials/card.ejs
@@ -15,6 +15,6 @@
       </div>
     </div>
     <div class="card-button">
-        <button>Comprar producto</button>
+        <button onclick="addItem('<%= id %>')">Comprar producto</button>
     </div>
 </div>
