--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -35,3 +35,4 @@
 <script src="/javascripts/glider.js"></script>
 <script src="/javascripts/productos.js"></script>
 <script src="/javascripts/buscador.js"></script>
+<script src="/javascripts/carrito.js"></script>
