--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -27,9 +27,9 @@
                 </ul>
             </div>
             <ul class="user">
-                <li><a href="/products/cart"><i class="fas fa-shopping-cart"></i></a></li>
                 <% if (locals.userLogin) { %>
                     <li><a href="/users/profile">Bienvenido <%= locals.userLogin.nombre %> </a></li>
+                    <li id="cart-btn" class="cart-btn"><!--<a href="/products/cart">--><i class="fas fa-shopping-cart"></i><!--</a>--></li>
                 <% } else { %>
                     <li><a href="/users/login">Login</a></li>
                     <li><a href="/users/register">Registro</a></li>
@@ -37,4 +37,5 @@
             </ul>
         </nav>
     </div>
+    <div class="cart-container"></div>
 </header>
